# fraktal_explorer

./: Cargo.toml  README.md  generate-rustdoc.sh
common/: Cargo.toml
common/src/: complex.rs  compute.rs  fraktals.rs  lib.rs
fraktals/: Cargo.toml
fraktals/src/: fraktal.rs  iterated_sin_z_fraktal.rs  jullia_fractal.rs  lib.rs  mandelbrot_fractal.rs  newton_raphson_z3_fraktal.rs
networking/: Cargo.toml
networking/src/: fragment_request.rs  fragment_result.rs  fragment_task.rs  lib.rs
src/: cli.rs  connect.rs  generate.rs  main.rs
worker/: Cargo.toml
worker/src/: connexion.rs  dispatcher.rs  lib.rs  processor.rs  worker.rs
